--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img class="fit-picture"
             src="Jialu.JPG"
             alt="A photo of me"
+            controls width="450"
     >
     
     <nav class="crumbs">
@@ -78,7 +79,7 @@
             </audio>
         </figure>
         <p>Memory from last year: <b>Best Cake Ever!</b>></p>
-        <video controls width="250">
+        <video controls width="450">
 
             <source src="video.mp4">
         
