--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <img class="fit-picture"
             src="Jialu.JPG"
             alt="A photo of me"
-            controls width="450"
+            width="300"
+            height="300"
     >
     
     <nav class="crumbs">
@@ -74,7 +75,7 @@
             <figcaption>Taylor Swift's Love Story</figcaption>
             <audio
                 controls
-                src="Love Story.mp3">
+                src="Love_Story.mp3">
                 Your browser does not support the <code>audio</code> element.
             </audio>
         </figure>
@@ -100,7 +101,7 @@
           <input type="text" name="name" id="name" required>
         </div>
         <div>
-          <label for="email">Choose the date: </label>
+          <label for="date">Choose the date: </label>
           <input type="date" name="date" id="date" required>
         </div>
 
