--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,7 @@
     <link rel="icon" href="favicon.ico">
 
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <header>
         <h1>Jialu's personal journals</h1>
@@ -27,41 +29,45 @@
         </ol>
     </nav>
     <main>
-        <p>
+        <p class="red">
             Here are my journals for today, yesterday and 2 days ago.
         </p>
     </main>
     <section>
-        <h2>4/10/2021</h2>
-        <div>
-            <p>Something about div</p>
+        <h2 > 4/10/2021</h2>
+        <div class = "wrap">
+            <p class = "blue"> Something about div</p>
         </div> 
-        <p><span>Something about span</span></p>
-        <p>Something horrible happened today. My boyfriend went back to San Diego and found out that someone broken into his apartment while he was in China.... So terrifying...</p>
+        <p class = "hex"><span>Something about span</span></p>
+        <p id="background">Something horrible happened today. My boyfriend went back to San Diego and found out that someone broken into his apartment while he was in China.... So terrifying...</p>
         <hr>
-        <p>I did 2 tests today. So exhausted...</p>
+        <p class = "tired">I did 2 tests today. So exhausted...</p>
         <hr>
         <h3>Something need to do today</h3>
-        <ul>
+        <ul class="box1">
             <li>Watch lecture recording for <b>CSE110</b></li>
             <li>Finish <b>Cogs118B</b> homework</li>
             <li>Finish <b>Cogs160</b> homework</li>
         </ul>
-        <p>Most importantly, <strong>Remember to eat fruit and vegetable!</strong></p>
+        <p class = "green">Most importantly, <strong>Remember to eat fruit and vegetable!</strong></p>
 
     </section>
 
     <section>
         <h2>4/09/2021</h2>
-        <p><i>Natural Language Processing</i> is such an amazing technique but is also so hard to learn! It's definitely <em>not</em> something that I could learn in several weeks...</p>
-        <p>This is a good website for learning NLP:<a href="https://www.udemy.com/course/nlp-natural-language-processing-with-python/">Website</a></p>
-        <p>I should probabily write this down... Remember to go to Linda's office, address is:</p>
-        <p>Guirong <br>
-            887 Gongsongling Road <br>
-            Weihai, Shandong <br>
-            264200 <br>
-            China <br>
-        </p>
+        <div class="wrapper">
+            <div class="box lh"> <p><i>Natural Language Processing</i> is such an amazing technique but is also so hard to learn! It's definitely <em>not</em> something that I could learn in several weeks...</p> </div>
+            <div class = "box rem"> <p>This is a good website for learning NLP:<a href="https://www.udemy.com/course/nlp-natural-language-processing-with-python/">Website</a></p> </div>
+            <div class = "box vh"> </div><p>I should probabily write this down... Remember to go to Linda's office, address is:</p> </div>
+        </div>
+        <div class="address">
+            <p>Guirong <br>
+                887 Gongsongling Road <br>
+                Weihai, Shandong <br>
+                264200 <br>
+                China <br>
+            </p>
+        </div>
 
 
 
